style.css
@import url(https://fonts.googleapis.com/css?family=Catamaran:400,700);
@import url(https://fonts.googleapis.com/css?family=Raleway);
body {
    font-family: 'Catamaran', sans-serif;
}

#menuContainer {
    display: -webkit-flex;
    display: flex;
    flex-flow: row wrap;
    -webkit-justify-content: space-around;
    justify-content: space-around;
    width: 70%;
    min-height: 50px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
}

#menuItem {
    background-color: #424141;
    width: 33.33%;
    color: white;
    font-family: 'Raleway', sans-serif;
    text-align: center;
    line-height: 55px;
    font-size: 30px;
}

#mainPageTitle {
    font-size: 40px;
    text-align: center;
    width: 100%;
    height: auto;
}

#contentContainer {
    width: 70%;
    height: auto;
    margin-left: auto;
    margin-right: auto;
    //background-color: blue;
}

#contentBox {
    display: -webkit-flex;
    display: flex;
    flex-flow: row;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 15px;
    width: 85%;
    min-height: 50px;
    background-color: #b8b8b8;
    padding: 25px;
    border-radius: 4px;
}

.skyscraperSeries {
    margin-top: 5px;
}

#textInfoMain {
    width: 50%;
    height: 100%;
    //background-color: purple;
    margin-top: auto;
    margin-bottom: auto;
}

#titleText {
    font-size: 35px;
}

.beautifulHousesSeries {
    text-align: right;
}

#imagePlaceholder {
    width: 40%;
    height: 200px;
    background-color: black;
    margin-top: auto;
    margin-bottom: auto;
}

.mainPageImg {
    margin-top: auto;
    margin-bottom: auto;
}

#skyScraperImg {
    width: 40%;
    //margin-top: 0px;
}

#houseImg {
    width: 40%;
}

#galleryImg {
    width: 40%;
}

#paragraphText {
    font-size: 17.5px;
}

